<resources>
    <string name="app_name">RandomAlarm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="time_fragment_label">Time Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="on">on</string>
    <string name="default_time">00:00</string>

    <string name="main">main</string>
    <string name="time">time</string>
    <string name="settings">settings</string>
    <string name="audio">add audio</string>
</resources>
